# PG4E

./: .gitignore  .markdownlint.yml  docker-compose.yml  pyproject.toml
DatabaseArchitectureAndNoSQLAtScale/: DatabaseArchitcureAndScale.md
DatabaseArchitectureAndNoSQLAtScale/Module1/: ScalingRelationalDatabases.md  ToSQLOrToNoSQL.md
DatabaseArchitectureAndNoSQLAtScale/Module2/: EmergenceOfBASESolutions.md  FirstGenerationCloudApplication.md  HowGoogleScaled.md  ReactingToRiseOfNoSQL.md  SecondGenerationCloudSystem.md
DatabaseArchitectureAndNoSQLAtScale/Module3/: BuildingDenoKVModelWithSecondaryIndexes.md  DenoAndDenoKV.md  ExploringCRUDInDenoKVUsingKVAdmin.md  ExploringDenoKVArchitecture.md  InstallingKVAdminPyClientAndServerOnDenoDeploy.md  JavaScriptIn3Slides.md  kvadmin.py  main.ts
DatabaseDesignAndBasicSQL/: DatabaseDesignAndBasicSQL.md
DatabaseDesignAndBasicSQL/Module1/: BasicPostgreSQLCommands.md  HistoryOfRelationalDatabases.md  InitialDatabaseSetup.md  SQLArchitecture.md  WelcomeToPostgreSQL.md  first_tables.sql  insert_data_ages.sql
DatabaseDesignAndBasicSQL/Module2/: DataTypesInPostgreSQL.md  DatabaseKeysAndIndexes.md  WorkingWithTablesAndPostgreSQL.md  automagic_table.sql
DatabaseDesignAndBasicSQL/Module3/: DatabaseNormalization.md  ExerciseBuildingADataModel.md  RelationalDatabaseDesign.md  UsingJOINAcrossMultipleTables.md  insert_make_data.sql  insert_model_data.sql  make_model_table.sql
DatabaseDesignAndBasicSQL/Module4/: course_data.sql  (+6 more)
IntermediatePostgreSQL/: IntermediatePostgreSQL.md
JsonAndNLPInPostgreSQL/: JsonAndNLPInPostgreSQL.md
(+73 files in other folders)
